完成首页布局

--- a/src/components/navbar/styles/index.module.less
+++ b/src/components/navbar/styles/index.module.less
@@ -3,34 +3,18 @@
   justify-content: space-between;
 
   &-logo {
-    width: 40px;
-    height: 40px;
-    margin-top: 7px;
+    width: 35px;
+    height: 35px;
+    margin-top: 8px;
   }
 
   &-title {
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 700;
-    color: var(--color-neutral-8);
+    color: var(--color-text-2);
   }
 }
 
 .icon {
-  margin-top: 7px;
-
-  &-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    font-size: 28px;
-    color: var(--color-neutral-6);
-    background-color: var(--color-neutral-2);
-  }
-
-  &-wrapper:hover {
-    background-color: var(--color-neutral-4);
-  }
+  margin-top: 8px;
 }
