--- a/src/components/sidebar/styles/index.module.less
+++ b/src/components/sidebar/styles/index.module.less
@@ -1,7 +1,5 @@
 .sidebar {
   &-open {
-    background-color: #ecfcff;
-
     top: 80px;
     position: fixed;
     height: 100%;
@@ -13,4 +11,9 @@
     top: 80px;
     z-index: 2;
   }
+}
+
+.drawer {
+  background-color: #f9f9f9;
+  color: #f9f9f9;
 }
