--- a/src/theme/global.module.less
+++ b/src/theme/global.module.less
@@ -5,5 +5,5 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
-  background-color: #f9f9f9;
+  background-color: var(--color-neutral-1);
 }
