--- a/src/views/layout/styles/home.module.less
+++ b/src/views/layout/styles/home.module.less
@@ -4,7 +4,7 @@
   width: 100%;
 
   .navbar {
-    background-color: #ffffff;
+    background-color: var(--color-bg-1);
 
     position: fixed;
     z-index: 1;
@@ -14,23 +14,24 @@
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
   }
 
-  .sidebar {
-    background-color: #ecfcff;
-
-    position: fixed;
-    top: 80px;
-    height: 100%;
-    width: 260px;
-  }
-
   .content {
-    background-color: #f1e99e;
-
     position: absolute;
-    top: 80px;
+    top: 75px;
+    padding: 5px;
+    max-width: 100%;
+    overflow: auto;
+    width: 100%;
+    height: 100%;
 
     @media screen and (min-width: 960px) {
-      left: 280px;
+      left: 275px;
+      width: calc(100% - 275px);
+    }
+
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
     }
   }
 }
