完成数据监控页面开发

--- a/src/views/user/user/styles/index.module.less
+++ b/src/views/user/user/styles/index.module.less
@@ -2,7 +2,7 @@
 @radius: 15px;
 
 .container() {
-  /* width: calc(100% - 30px); */
+  width: calc(100% - 30px);
   margin-bottom: 20px;
   padding: 10px;
   border-radius: @radius;
