--- a/src/views/layout/styles/home.module.less
+++ b/src/views/layout/styles/home.module.less
@@ -16,14 +16,13 @@
 
   .content {
     position: absolute;
-    top: 75px;
-    padding: 13px;
-    max-width: 100%;
-    width: 100%;
+    top: 87px;
+    left: 6px;
+    width: calc(100% - 14px);
     height: 100%;
 
     @media screen and (min-width: 960px) {
-      left: 270px;
+      left: 280px;
       width: calc(100% - 275px);
     }
 
