--- a/src/views/dashboard/workspace/styles/message.module.less
+++ b/src/views/dashboard/workspace/styles/message.module.less
@@ -1,13 +1,7 @@
 @import "./text.module.less";
 
 .message {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &-icon {
-    font-size: 80px;
-    margin: 20px;
+  @media screen and (min-width: 768px) {
+    height: 100%;
   }
 }
