--- a/src/views/layout/styles/auth.module.less
+++ b/src/views/layout/styles/auth.module.less
@@ -43,11 +43,13 @@
   padding-top: 18px;
   padding-bottom: 18px;
 
-  background: linear-gradient(
-    112.83deg,
-    rgba(255, 255, 255, 0.82) 0%,
-    rgba(255, 255, 255, 0.8) 110.84%
-  );
+  @media screen and (min-width: 768px) {
+    background: linear-gradient(
+      112.83deg,
+      rgba(255, 255, 255, 0.82) 0%,
+      rgba(255, 255, 255, 0.8) 110.84%
+    );
+  }
 
   box-shadow: 0px 7px 23px rgb(0 0 0 / 5%);
 }
