--- a/src/views/layout/styles/auth.module.less
+++ b/src/views/layout/styles/auth.module.less
@@ -27,8 +27,10 @@
   }
 
   .footer {
-    position: absolute;
-    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
     width: 100%;
   }
 }
@@ -36,7 +38,6 @@
 .navbar {
   width: 1020px;
   max-width: 90%;
-  border: 1.5px solid #ffffff;
   border-radius: 15px;
   padding-inline-start: 16px;
   padding-inline-end: 16px;
