完成注册服务接入和错误页面更新

--- a/src/views/auth/signup/styles/index.module.less
+++ b/src/views/auth/signup/styles/index.module.less
@@ -36,4 +36,10 @@
       height: 50px;
     }
   }
+
+  &-link {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 10px;
+  }
 }
