--- a/src/views/dashboard/workspace/styles/header.module.less
+++ b/src/views/dashboard/workspace/styles/header.module.less
@@ -7,12 +7,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 20px;
   border-radius: @radius;
   background-color: var(--color-bg-1);
   box-shadow: @shadow;
-  margin-bottom: 20px;
 
-  &-icon {
+  .icon {
     margin: 20px;
   }
 }
